fix: Prevent font flash by adding loading screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
   src: url('/font/Art.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: block; /* Hide text until font is loaded - prevents FOUT */
 }
 
 @custom-variant dark (&:is(.dark *));
